<resources>
    <string name="app_name">Chowall</string>

    <string name="main_text">지금 초월과 함께\n자유로운 여행을 시작하세요!</string>
    <string name="main_btn_recommend">나만의 여행 코스 추천받기</string>
    <string name="main_btn_lists">배리어프리 여행 장소보기</string>

    <string name="rec_title">초월 코스 추천</string>

    <string name="rec_q1_txt">Q1\n어느 지역으로 떠나시나요?</string>
    <string name="rec_q1_chun">춘천</string>
    <string name="rec_q1_gang">강릉</string>
    <string name="rec_q1_jeon">전주</string>

    <string name="rec_q2_txt">Q2\n누구와 함께 떠나시나요?</string>
    <string name="rec_q2_alone">혼자서</string>
    <string name="rec_q2_family">가족과</string>
    <string name="rec_q2_friend">친구와</string>
    <string name="rec_q2_lover">연인과</string>

    <string name="rec_q3_txt">Q3\n어떤 일정으로 떠나시나요?</string>
    <string name="rec_q3_day">당일치기</string>
    <string name="rec_q3_1night">1박</string>
    <string name="rec_q3_2night">2박 이상</string>

    <string name="rec_q4_txt">Q4\n어떤 여행을 선호하시나요?</string>
    <string name="rec_q4_refresh">휴식/힐링</string>
    <string name="rec_q4_food">맛집/카페</string>
    <string name="rec_q4_hot">핫 플레이스</string>
    <string name="rec_q4_activity">액티비티</string>

    <string name="rec_loading_wait">잠시만 기다려주세요</string>
    <string name="rec_loading_for">당신을 위한</string>
    <string name="rec_loading_search">초월 추천 코스를 조회 중입니다</string>

    <string name="rec_result_txt">초월이 추천하는\n당신을 위한 여행코스</string>

    <string name="list_title">검색 결과</string>
    <string name="list_txt">배리어프리 여행 장소</string>
    <string name="list_chun">춘천</string>
    <string name="list_gang">강릉</string>
    <string name="list_jeon">전주</string>

    <string name="list_item_name">라모스버거</string>
    <string name="list_item_address">강원 춘천시 옛경춘로 835</string>
    <string name="list_item_phone">0507-1402-0006</string>
    <string name="list_item_time">금 11:00-22:00 / 금 제외 11:00-21:00</string>
    <string name="list_item_break_time">(브레이크타임 15:00-16:00)</string>

    <string name="chowall_slogan">장벽을 넘어\n여행의 한계를 초월하다</string>

    <string name="init">지금 초월과 함께\n자유로운 여행을 시작하세요!</string>
    <string name="init_register">계정이 없으신가요? 회원가입</string>

    <string name="regis">회원 정보</string>
    <string name="regis_name">이름</string>
    <string name="regis_id">아이디</string>
    <string name="regis_email">이메일</string>
    <string name="regis_pw">비밀번호</string>
    <string name="regis_repw">비밀번호 확인</string>
    <string name="regis_id_hint">영문, 숫자, 6~10자</string>
    <string name="regis_pw_hint">영문, 숫자, 특수문자(!@#$%&amp;*?.), 6~10자</string>

    <string name="regis_error_name">이름을 입력해 주십시오.</string>
    <string name="regis_error_id">아이디를 입력해 주십시오.</string>
    <string name="regis_error_id_regex">아이디 형식이 올바르지 않습니다.</string>
    <string name="regis_error_email">이메일을 입력해 주십시오.</string>
    <string name="regis_error_email_regex">이메일 형식이 올바르지 않습니다.</string>
    <string name="regis_error_pw">비밀번호를 입력해 주십시오.</string>
    <string name="regis_error_pw_regex">비밀번호 형식이 올바르지 않습니다.</string>
    <string name="regis_error_pw_equal">비밀번호가 일치하지 않습니다.</string>
    <string name="regis_error_repw">비밀번호를 재입력해 주십시오.</string>

    <string name="restrictions_name">성이름름</string>
    <string name="restrictions_question">님이 여행 시 겪는 제약을 선택해주세요.</string>
    <string name="restrictions_answer1">전동 휠체어 사용자 및 동행자</string>
    <string name="restrictions_answer2">수동 휠체어 사용자 및 동행자</string>
    <string name="restrictions_answer3">거동이 불편한 노인/임산부 및 동행자</string>
    <string name="restrictions_answer4">유아차 사용자 및 동행자</string>
    <string name="restrictions_answer5">제약 없음</string>
    <string name="restrictions_btn_signup">회원가입</string>

    <string name="btn_login">로그인</string>
    <string name="btn_next">다음</string>
    <string name="btn_phone_auth">휴대폰 본인인증</string>

    <string name="login_id_hint">아이디</string>
    <string name="login_pw_hint">비밀번호</string>

    <string name="main_search_hint">여행 지역, 장소, 해시태그를 검색하세요</string>

    <string name="main_recommend_course">국내 여행 추천 코스</string>
    <string name="main_popular_course">초월 인기 코스</string>

    <string name="card_desc_1">풍경 속에 힐링을 담다</string>
    <string name="card_desc_2">풍경 속에 힐링</string>

    <string name="recommend_title">초월 코스 추천</string>

    <string name="q1">Q1\n어느 지역으로 떠나시나요?</string>
    <string name="q1_search_hint">여행 지역을 검색해주세요.</string>

    <string name="q2">Q2\n누구와 함께 떠나시나요?</string>
    <string name="q2_btn_alone">개인</string>
    <string name="q2_btn_family">가족</string>
    <string name="q2_btn_friend">친구</string>
    <string name="q2_btn_couple">연인</string>
    <string name="q2_btn_group">단체</string>

    <string name="q3">Q3\n어떤 일정으로 떠나시나요?</string>
    <string name="q3_start">여행 시작일</string>
    <string name="q3_end">여행 종료일</string>
    <string name="q3_btn_choice">선택</string>
    <string name="q3_start_date_ex">22.11.23</string>
    <string name="q3_end_date_ex">22.11.30</string>
    <string name="q3_btn_day">당일치기</string>
    <string name="q3_btn_1day">1박</string>
    <string name="q3_btn_2day">2박</string>

    <string name="q4">Q4\n어떤 여행을 선호하시나요?</string>
    <string name="q4_btn_refresh">휴식/힐링</string>
    <string name="q4_btn_restaurant">맛집/카페</string>
    <string name="q4_btn_hotplace">핫플레이스</string>
    <string name="q4_btn_activity">액티비티</string>
    <string name="q4_btn_culture">문화 탐방</string>

    <string name="recommend_loading_wait">잠시만 기다려주세요</string>
    <string name="recommend_loading_name">성이름름</string>
    <string name="recommend_ladoing_for">님을 위한</string>
    <string name="recommend_loading_check">초월 추천 코스를 조회 중입니다</string>

    <string name="recommend_result_1">초월이 추천하는</string>
    <string name="recommend_result_user">성이름름</string>
    <string name="recommend_result_2"> 님을 위한 코스</string>
    <string name="recommend_result_title">속이 뻥 뚫리는 바다와 함께</string>
    <string name="recommend_result_c1">강화도립화목원</string>
    <string name="recommend_result_c2">비포선셋</string>
    <string name="recommend_result_c3">소양강스카이워크</string>
    <string name="recommend_result_c4">산토리니</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>