<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".list.ListActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3.8834"
      android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:fontFamily="@font/opensans_bold"
          android:text="@string/list_title"
          android:textColor="@color/white"
          android:textSize="16sp"
          tools:layout_editor_absoluteX="16dp"
          tools:layout_editor_absoluteY="22dp" />

    </androidx.appcompat.widget.Toolbar>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2.0226"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="18.7777"
        android:text="@string/list_txt"
        android:fontFamily="@font/opensans_bold"
        android:textColor="@color/basic_txt_color"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20.2222"
        android:orientation="horizontal"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1.2944"
      android:orientation="vertical"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2.4571"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <ToggleButton
        android:id="@+id/btn_list_chun"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8.3544"
        android:background="@drawable/toggle_list_selector"
        android:fontFamily="@font/opensans_bold"
        android:stateListAnimator="@null"
        android:checked="true"
        android:textColor="@drawable/toggle_list_text_color"
        android:textOff="@string/list_chun"
        android:textOn="@string/list_chun"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.7288"
        android:orientation="horizontal"/>

    <ToggleButton
        android:id="@+id/btn_list_gang"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8.3544"
        android:background="@drawable/toggle_list_selector"
        android:fontFamily="@font/opensans_bold"
        android:stateListAnimator="@null"
        android:textColor="@drawable/toggle_list_text_color"
        android:textOff="@string/list_gang"
        android:textOn="@string/list_gang"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.7288"
        android:orientation="horizontal"/>

    <ToggleButton
        android:id="@+id/btn_list_jeon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8.3544"
        android:background="@drawable/toggle_list_selector"
        android:fontFamily="@font/opensans_bold"
        android:stateListAnimator="@null"
        android:textColor="@drawable/toggle_list_text_color"
        android:textOff="@string/list_jeon"
        android:textOn="@string/list_jeon"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10.4777"
        android:orientation="horizontal"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1.2645"
      android:orientation="vertical"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="47.8964"
      android:background="@color/list_mint_background"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="16.9473"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_recycler" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"/>

  </LinearLayout>

</LinearLayout>