<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp.RestrictionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.41666666" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5833333" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.32608697" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8043478" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_rest"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/img_logo_rest"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/guideline73"
                app:layout_constraintEnd_toStartOf="@+id/guideline71"
                app:layout_constraintStart_toStartOf="@+id/guideline70"
                app:layout_constraintTop_toTopOf="@+id/guideline72"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/chowall_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14.41666666666667"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.818181818181818"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_slogan_rest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:bufferType="spannable"
                android:fontFamily="@font/opensans_bold"
                android:gravity="top"
                android:text="@string/chowall_slogan"
                android:textColor="@color/textColor"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.818181818181818"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6875"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_name"
                android:textColor="@color/main" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11.3125"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:gravity="top"
                android:singleLine="false"
                android:text="@string/restrictions_question" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.863636363636364"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal"/>

            <ImageButton
                android:id="@+id/btn_a1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/check_box" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.055555555555556"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_a1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10.77777777777778"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_answer1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.666666666666667"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal"/>

            <ImageButton
                android:id="@+id/btn_a2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/check_box" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.055555555555556"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_a2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10.77777777777778"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_answer2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.666666666666667"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal"/>

            <ImageButton
                android:id="@+id/btn_a3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/check_box" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.055555555555556"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_a3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13.61111111111111"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_answer3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.833333333333333"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal"/>

            <ImageButton
                android:id="@+id/btn_a4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/check_box" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.055555555555556"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_a4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.888888888888889"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_answer4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.555555555555556"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal"/>

            <ImageButton
                android:id="@+id/btn_a5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/check_box" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.055555555555556"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_a5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.555555555555556"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/restrictions_answer5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12.88888888888889"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.863636363636364"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.181818181818182"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>

            <Button
                android:id="@+id/btn_signup_rest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13"
                android:fontFamily="@font/opensans_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/restrictions_btn_signup"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.909090909090909"
            android:orientation="vertical"/>
    </LinearLayout>

</LinearLayout>